# hopty

./: Hopty.cabal  README.md  TestHopty.hs
Numeric/Optimization/: Hopty.hs
