name:                hopty
version:             0.0
synopsis:            A demonstration of various optimization methods
author:              Yakov Shklarov
maintainer:          yshklarov@gmail.com
license:             PublicDomain
license-file:        LICENSE
build-type:          Simple
cabal-version:       >=1.8

library
  build-depends:     base, random, optparse-applicative
  exposed-modules:   Numeric.Optimization.Hopty  

executable testhopty
  build-depends:     base, random, optparse-applicative
  main-is:           TestHopty.hs
--  ghc-options:       "-rtsopts"
